namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bata-namespace  # pangalan sa ns
