dep12-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-example
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
rules:
  - host: app.172.16.12.43.nip.io
    http:
      paths:
        - path: /one
          pathType: Prefix
          backend:
            service:
              name: one-service
              port:
                number: 80
        - path: /two
          pathType: Prefix
          backend:
            service:
              name: two-service
              port:
                number: 80
